<resources>
    <string name="app_name">Perdana NTB</string>
    <string name="navigation_home_title">Home</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="next">Lanjutkan</string>
    <string name="skip">Lewati</string>
    <string name="you_are_not_registered">Anda Belum Terdaftar</string>
    <string name="auth_intro_text_body">Daftar sebagai anggota untuk dapat \nmenikmati lebih banyak fitur</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="username_hint">Username / No. Anggota</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="full_name_hint">Nama Lengkap (Sesuai KTP)</string>
    <string name="phone_hint">No Telepon</string>
    <string name="id_card_hint">No. KTP / NIK</string>
    <string name="address_hint">Alamat (Sesuai KTP)</string>
    <string name="man">Pria</string>
    <string name="woman">Wanita</string>
    <string name="photo_scan_ktp">Photo / Scan KTP</string>
    <string name="club_hint">Pilih Klub (Tekan untuk memilih)</string>
    <string name="no_internet_connection">Tidak dapat terkoneksi ke server</string>
    <string name="club">Klub</string>
    <string name="unit">Satuan</string>
    <string name="navigation_presence_title">Presensi</string>
    <string name="navigation_profile_title">Profil</string>
    <string name="navigation_scoring_title">Skoring</string>
    <string name="top_score_archer">Top Score Archer</string>
    <string name="number_symbol">#</string>
    <string name="name">Nama</string>
    <string name="score">Skor</string>
    <string name="distance">Jarak</string>
    <string name="target">Target</string>
    <string name="initial_number">1</string>
    <string name="initial_name">Eby Sofyan</string>
    <string name="initial_score">1080</string>
    <string name="initial_distance">30m</string>
    <string name="initial_target">Puta</string>
    <string name="spinner_regional_hint">Pilih Rayon</string>
    <string name="spinner_prov_hint">Pilih Provinsi</string>
    <string name="spinner_branch_hint">Pilih Cabang</string>
    <string name="logout">Keluar</string>
    <string name="personal_info">Informasi Pribadi</string>
    <string name="physic_info">Informasi Fisik</string>
    <string name="create_presence">Buat Presensi</string>
    <string name="add_new_presence">Buat Presensi Baru</string>
    <string name="add_presence_hint">Keterangan Absensi Ex : Latihan di lapangan Pelembak</string>
    <string name="save">Simpan</string>
    <string name="dummy_title">Lorem Ipsum Dolor Sit Amet Dan sebagainya entah saya juga lupa</string>
    <string name="dummy_date">Senin, 22 Desember 2019</string>
    <string name="presence">Hadir</string>
    <string name="find_member">Cari anggota . . .</string>
    <string name="applicant_hint">Pendaftar</string>
    <string name="notification_badge_hint">9+</string>
    <string name="notification_menu_title">Notifikasi</string>

    <string name="google_maps_api_key" translatable="false">AIzaSyBPw7MnKt3KemuIumvwqbqnmDQltXUNxzI</string>
    <string name="create_practice">Buat Form Skoring</string>
    <string name="target_type_hint">Jenis Target</string>
    <string name="distance_hint">Jarak (Dalam Meter)</string>
    <string name="series_hint">Jumlah Rambahan</string>
    <string name="arrow_hint">Jumlah Arrow Setiap Rambahan</string>
    <string name="notes_hint">Informasi Tambahan</string>
    <string name="archery_range_hint">Lokasi Latihan</string>
    <string name="custom_address_hint">Nama Lokasi Latihan</string>
    <string name="initial_series">RAMBAHAN 1</string>
    <string name="send">Kirim</string>
    <string name="photo_scan_skck">Photo / Scan SKCK</string>
    <string name="accept">Terima</string>
    <string name="reject">Tolak</string>
    <string name="register_number_here">Masukkan nomort registrasi disini . . .</string>
    <string name="accept_member">Terima Anggota</string>
    <string name="register_number_hint">Berikan Nomor Register pada anggota</string>
    <string name="dashboard_is_not_available_yet">Dashboard belum tersedia</string>
    <string name="register_successfully">Register berhasil, akun anda akan di verifikasi oleh pengurus klub sebelum bisa digunakan</string>
    <string name="qr_code">QR Code</string>
    <string name="show">Tampilkan</string>
    <string name="save_scoring_form">Simpan Form Skoring</string>
    <string name="scan">Scan</string>
    <string name="cek_keanggotaan">Cek Keanggotaan</string>
    <string name="keluar">Keluar</string>
</resources>
