<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/presence_dialog_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@mipmap/camera_close" />

        <TextView
            android:id="@+id/presence_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/add_new_presence"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/presence_dialog_text_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:hint="@string/add_presence_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:maxLength="255"
        android:padding="4dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/presence_dialog_button_save"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="16dp"
        android:text="@string/save" />
</LinearLayout>