<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_light_theme" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/register_form_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_username_input_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/username_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/password_hint"
                app:layout_constraintTop_toBottomOf="@id/register_username_input_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/spinner_regional_hint"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/register_club_spinner_regional"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/spinner_prov_hint"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/register_club_spinner_province"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/spinner_branch_hint"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/register_club_spinner_branch"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <RadioGroup
                android:id="@+id/register_radio_group_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/register_radio_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/club" />

                <RadioButton
                    android:id="@+id/register_radio_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_club_input_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:focusable="false"
                android:hint="@string/club_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_full_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/full_name_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapWords"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_phone_input_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/phone_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="14"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/register_radio_group_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/register_radio_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/register_radio_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woman" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_address_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/address_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="3"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_id_card_input_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/id_card_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="16"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/photo_scan_ktp"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardBackgroundColor="@color/grey_200"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/register_card_photo_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:padding="4dp"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/register_card_photo_image_camera"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:padding="4dp"
                    android:src="@drawable/ic_camera" />

            </com.google.android.material.card.MaterialCardView>

            <include
                layout="@layout/button_primary"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>