<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorPrimaryDarkOpacity200"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/main_score_item_text_number"
            style="@style/ToolbarTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/initial_number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/main_score_item_text_name"
            style="@style/ToolbarTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/initial_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/main_score_item_text_score"
            style="@style/ToolbarTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/initial_score"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/main_score_item_text_distance"
            style="@style/ToolbarTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/initial_distance"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/main_score_item_text_target"
            style="@style/ToolbarTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/initial_target"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>