<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/perdana_indonesia" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/auth_intro_image_face"
            android:layout_width="89dp"
            android:layout_height="89dp"
            android:alpha="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_user_face"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/auth_intro_text_title"
            style="@style/ToolbarTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/you_are_not_registered"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/auth_intro_image_face" />

        <TextView
            style="@style/ToolbarTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/auth_intro_text_body"
            android:textColor="@color/secondaryText"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/auth_intro_text_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:baselineAligned="false"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <include
                layout="@layout/button_primary"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <include
                layout="@layout/button_outlined_primary"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>